# technopark

./: .gitignore  .travis.yml  CMakeLists.txt
.gitignore/: .gitignore
ATDS/modul1/: CMakeLists.txt
ATDS/modul1/ex2/: README.md
ATDS/modul1/ex3/: README.md  main.cpp
ATDS/modul1/ex4/: README.md
ATDS/modul1/ex5/: README.md  main.cpp
ci/: build_stage  run_unit_tests_stage
projects/ATDS/modul1/: CMakeLists.txt
projects/ATDS/modul1/ex1/: README.md  main.cpp
projects/ATDS/modul1/ex2/: main.cpp
projects/ATDS/modul1/ex3/: README.md  main.cpp
projects/ATDS/modul1/ex4/: README.md  main.cpp
projects/ATDS/modul1/ex5/: README.md
projects/ATDS/modul1/ex6/: README.md  main.cpp
projects/ATDS/modul1/ex7/: README.md  main.cpp
projects/c++/IZ1/: CMakeLists.txt  README.md  roman_numerals.c  roman_numerals.h
projects/c++/IZ1/test/: CMakeLists.txt  unit_tests.cpp
projects/c++/IZ2/: CMakeLists.txt  err.h  main.c  matrix.c  matrix.h
projects/web/homework/: package-lock.json  package.json
projects/web/homework/src/: App.js  index.js
projects/web/homework/src/components/: Dev.jsx  Dev.module.scss  QuestionCard.jsx  QuestionCard.module.scss
projects/web/homework/src/components/content/login-form/: LoginForm.jsx  LoginForm.scss
projects/web/homework/src/components/sider/: Sider.js
web/homework/: package-lock.json  package.json
web/homework/src/components/: Dev.jsx  Dev.module.scss  QuestionCard.jsx  QuestionCard.module.scss
web/homework/src/components/navigation-bar/: NavigationBar.jsx
