cmake_minimum_required(VERSION 3.14)
project(modul1)

set(CMAKE_CXX_STANDARD 11)

#add_executable(ex1
#        ex1/main.cpp
#        )
#add_executable(ex2
#        ex2/main.cpp
#        )
#add_executable(ex3
#        ex3/main.cpp
#        )
#add_executable(ex4
#        ex4/main.cpp
#        )
#add_executable(ex5
#        ex5/main.cpp
#        )
#add_executable(ex6
#        ex6/main.cpp
#        )
#add_executable(ex7
#        ex7/main.cpp
#        )
